--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<a href="FIZ219_EST_UygulamaNotlari_10_Gauss_Eleme_Yontemi_ile_nxn_Dogrusal_Denklem_Cozumu.html">FIZ219_EST_UygulamaNotlari_10_Gauss_Eleme_Yontemi_ile_nxn_Dogrusal_Denklem_Cozumu.html</a>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>HTML Meta Tag</title>
+      <meta http-equiv = "refresh" content = "0; url = https://emresururi.github.io/FIZ219/" />
+   </head>
+   <body>
+      <p>FIZ219 sayfasına yönlendiriliyorsunuz...</p>
+   </body>
+</html>
