--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
       <meta http-equiv = "refresh" content = "0; url = https://emresururi.github.io/FIZ219/" />
    </head>
    <body>
-      <p>FIZ219 sayfasına yönlendiriliyorsunuz...</p>
+       Dr. Emre S. Taşcı<br>
+       Fizik Müh. Bölümü | Dept. Eng. Physics<br>
+       Hacettepe Üniversitesi | Hacettepe University<br>
+       Ankara / Turkey
+       <hr>
+       <ul>
+           <li><a href="https://emresururi.github.io/Kurallar/">EST Kuralları</a>: Genel olarak akademik, özelde benimle çalışırken/iletişime geçerken dikkat edilmesi gereken kurallar, tavsiyeler(, ahkâmlarrrr).</li>
+           <li><a href="https://emresururi.github.io/FIZ219/">FIZ219 - Bilgisayar Programlama I</a></li>
+           <li><a href="https://emresururi.github.io/FIZ220/">FIZ220 - Bilgisayar Programlama II</a></li>
+           <li><a href="https://emresururi.github.io/FIZ228/">FIZ228 - Numerical Analysis</a></li>
+           <li><a href="https://github.com/emresururi/FIZ371">FIZ371 - Scientific and Technical Calculations Course</a></li>
+           <li><a href="https://emresururi.github.io/Stuff/"></a>Stuff...</li>
+        </ul>
    </body>
 </html>
