Forgot to remove the redirect

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "0; url = https://emresururi.github.io/FIZ219/" />
+      <title>EST's Shack</title>
    </head>
    <body>
        Dr. Emre S. Taşcı<br>
