Misplaced the link tag for Stuff..

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            <li><a href="https://emresururi.github.io/FIZ220/">FIZ220 - Bilgisayar Programlama II</a></li>
            <li><a href="https://emresururi.github.io/FIZ228/">FIZ228 - Numerical Analysis</a></li>
            <li><a href="https://github.com/emresururi/FIZ371">FIZ371 - Scientific and Technical Calculations Course</a></li>
-           <li><a href="https://emresururi.github.io/Stuff/"></a>Stuff...</li>
+           <li><a href="https://emresururi.github.io/Stuff/">Stuff...</a></li>
         </ul>
    </body>
 </html>
