A much better-looking version

--- a/index.html
+++ b/index.html
@@ -1,21 +1,87 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <title>EST's Shack</title>
-   </head>
-   <body>
-       Dr. Emre S. Taşcı<br>
-       Fizik Müh. Bölümü | Dept. Eng. Physics<br>
-       Hacettepe Üniversitesi | Hacettepe University<br>
-       Ankara / Turkey
-       <hr>
-       <ul>
-           <li><a href="https://emresururi.github.io/Kurallar/">EST Kuralları</a>: Genel olarak akademik, özelde benimle çalışırken/iletişime geçerken dikkat edilmesi gereken kurallar, tavsiyeler(, ahkâmlarrrr).</li>
-           <li><a href="https://emresururi.github.io/FIZ219/">FIZ219 - Bilgisayar Programlama I</a></li>
-           <li><a href="https://emresururi.github.io/FIZ220/">FIZ220 - Bilgisayar Programlama II</a></li>
-           <li><a href="https://emresururi.github.io/FIZ228/">FIZ228 - Numerical Analysis</a></li>
-           <li><a href="https://github.com/emresururi/FIZ371">FIZ371 - Scientific and Technical Calculations Course</a></li>
-           <li><a href="https://emresururi.github.io/Stuff/">Stuff...</a></li>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EST's Shack</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #6a0dad;
+            font-size: 2.5em;
+        }
+        h2 {
+            text-align: center;
+            color: #6a0dad;
+            font-size: 1.5em;
+        }
+        p {
+            text-align: center;
+            font-size: 1.2em;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+            background: #f4f4f4;
+            padding: 10px;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        li:hover {
+            background: #e0e0ff;
+        }
+        a {
+            color: #6a0dad;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        hr {
+            border: 1px solid #ddd;
+            margin: 20px 0;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>EST's Shack</h1>
+        <h2>Dr. Emre S. Taşcı</h2>
+		<p><a href="https://www.emresururi.com">www.emresururi.com</a> | 
+		   <a href="mailto:emre.tasci@hacettepe.edu.tr">emre.tasci@hacettepe.edu.tr</a></p>
+        <p>Fizik Müh. Bölümü | Dept. Eng. Physics</p>
+        <p>Hacettepe Üniversitesi | Hacettepe University</p>
+        <p>Ankara / Turkey</p>
+        <hr>
+        <ul>
+            <li><a href="https://emresururi.github.io/Kurallar/">EST Kuralları</a>: Genel olarak akademik, özelde benimle çalışırken/iletişime geçerken dikkat edilmesi gereken kurallar, tavsiyeler(, ahkâmlarrrr).</li>
+            <li><a href="https://emresururi.github.io/FIZ219/">FIZ219 - Bilgisayar Programlama I</a></li>
+            <li><a href="https://emresururi.github.io/FIZ220/">FIZ220 - Bilgisayar Programlama II</a></li>
+            <li><a href="https://emresururi.github.io/FIZ228/">FIZ228 - Numerical Analysis</a></li>
+            <li><a href="https://github.com/emresururi/FIZ371">FIZ371 - Scientific and Technical Calculations Course</a></li>
+            <li><a href="https://emresururi.github.io/Stuff/">Stuff...</a>: Musings, side-projects, scribbles and other leisurely stuff…</li>
         </ul>
-   </body>
+    </div>
+</body>
 </html>
+
