--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li><a href="https://emresururi.github.io/FIZ219/">FIZ219 - Bilgisayar Programlama I</a></li>
             <li><a href="https://emresururi.github.io/FIZ220/">FIZ220 - Bilgisayar Programlama II</a></li>
             <li><a href="https://emresururi.github.io/FIZ228/">FIZ228 - Numerical Analysis</a></li>
-            <li><a href="https://github.com/emresururi/FIZ371">FIZ371 - Scientific and Technical Calculations Course</a></li>
+            <li><a href="https://github.com/emresururi/FIZ371">FIZ371 - Scientific and Technical Calculations</a></li>
             <li><a href="https://emresururi.github.io/Stuff/">Stuff...</a>: Musings, side-projects, scribbles and other leisurely stuff…</li>
         </ul>
     </div>
