--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <li><a href="https://emresururi.github.io/Kurallar/">EST Kuralları</a>: Genel olarak akademik, özelde benimle çalışırken/iletişime geçerken dikkat edilmesi gereken kurallar, tavsiyeler(, ahkâmlarrrr).</li>
             <li><a href="https://emresururi.github.io/FIZ219/">FIZ219 - Bilgisayar Programlama I</a></li>
             <li><a href="https://emresururi.github.io/FIZ220/">FIZ220 - Bilgisayar Programlama II</a></li>
+            <li><a href="https://emresururi.github.io/FIZ227/">FIZ227 - Bilgisayar Programlama</a></li>
             <li><a href="https://emresururi.github.io/FIZ228/">FIZ228 - Numerical Analysis</a></li>
             <li><a href="https://emresururi.github.io/FIZ371/Cover.html">FIZ371 - Scientific and Technical Calculations</a></li>
             <li><a href="https://emresururi.github.io/Stuff/">Stuff...</a>: Musings, side-projects, scribbles and other leisurely stuff…</li>
